# stack_trace

./: CMakeLists.txt  README.md
include/: stack_trace.h
include/collect/: resolver.h  resolver_base.h  resolver_bfd.h  trace.h
include/common/: demangler.h  file_stream.h  utils.h
include/output/: printer.h
include/printer/: printer.h
src/: file_stream.h  printer.h  resolver.h  resolver_base.h  resolver_bfd.cpp  resolver_bfd.h  trace.h  utils.h
test/: test_stack_trace.cpp
